--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,41 @@
-#container {
-  text-align: center;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+
+#content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(135deg, #e0f7fa, #80deea); 
+  min-height: 100vh;
+  padding: 20px;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+
+#image-container img {
+  max-width: 250px;
+  margin-bottom: 20px; 
+  filter: drop-shadow(0px 4px 6px rgba(0, 0, 0, 0.1));
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+ion-card {
+  width: 100%;
+  background-color: white; 
+  border-radius: 15px; 
+  box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.1); 
+  margin: 20px auto;
+  margin-top: -40px;
 }
 
-#container a {
-  text-decoration: none;
+
+ion-card-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #000000; 
+  margin-bottom: 20px;
 }
+
+
+
+
+
+
