--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,15 +1,12 @@
-
-
 #content-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(135deg, #e0f7fa, #80deea); 
+  background: linear-gradient(135deg, #ffffff, #26014e); 
   min-height: 100vh;
   padding: 20px;
 }
-
 
 #image-container img {
   max-width: 250px;
@@ -17,25 +14,52 @@
   filter: drop-shadow(0px 4px 6px rgba(0, 0, 0, 0.1));
 }
 
+/* Estilo de la Card */
 ion-card {
   width: 100%;
-  background-color: white; 
+  background-color: #F5F5F5; 
   border-radius: 15px; 
   box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.1); 
   margin: 20px auto;
   margin-top: -40px;
 }
 
-
 ion-card-title {
   font-size: 1.5rem;
   font-weight: bold;
-  color: #000000; 
+  color: #0d1436; 
   margin-bottom: 20px;
 }
 
+.custom-input-item {
+  background: transparent;
+  border-radius: 15px;
+  border: 1px solid #020354;
+  margin-bottom: 15px;
+  border-radius: 12px;
+  padding: 0;
+}
 
+.forgot-password {
+  text-align: center;
+  margin-top: 15px;
+}
 
+.forgot-password a {
+  color: #020241; 
+  text-decoration: none; 
+  font-size: 1rem;
+  
+}
 
+.forgot-password a:hover {
+  text-decoration: none;
+  color: #3b256e;
+}
 
+/* Botones */
+ion-button {
+  --background: #072a3c;
+  color: white;
+}
 
