--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -1,13 +1,69 @@
+<header>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+</header>
+
 <ion-content [fullscreen]="true" class="ion-padding">
   <div class="header-container">
     <ion-icon name="grid-outline" class="bienvenido-icon"></ion-icon>
     <div class="bienvenido-text">
-      <ion-label class="bienvenido-label">Bienvenido,</ion-label>
-      <ion-label class="nombre-usuario-label"><strong>{{nombre_usuario}}</strong></ion-label>
+      <ion-label class="bienvenido-label">
+        Bienvenido, <span class="nombre-usuario">{{nombre_usuario}}</span>
+      </ion-label>
     </div>
-    <ion-icon name="person-circle-outline" class="bienvenido-icon"></ion-icon>
+    <ion-icon name="person-circle-outline" class="bienvenido-icon" (click)="goToProfile()"></ion-icon>
+  </div>
+
+  <div class="imagen-container">
+    <img src="assets/img/imagen_inicio.jpg" alt="Imagen de inicio" class="imagen-inicio">
+  </div>
+
+  <div class="search-container">
+    <ion-searchbar placeholder="Buscar..." class="searchbar-redondeada"></ion-searchbar>
+  </div>
+
+  <div class="cards-container">
+    <div class="card-item">
+      <ion-card class="card-image-container">
+        <img src="assets/img/card-image1.jpg" alt="Imagen 1" class="card-image">
+      </ion-card>
+      <div class="card-info">
+        <div class="card-description">
+          <p>Descripción del producto 1</p>
+        </div>
+        <div class="card-price">
+          <p>$20.00</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-item">
+      <ion-card class="card-image-container">
+        <img src="assets/img/card-image2.jpg" alt="Imagen 2" class="card-image">
+      </ion-card>
+      <div class="card-info">
+        <div class="card-description">
+          <p>Descripción del producto 2</p>
+        </div>
+        <div class="card-price">
+          <p>$30.00</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-item">
+      <ion-card class="card-image-container">
+        <img src="assets/img/card-image3.jpg" alt="Imagen 3" class="card-image">
+      </ion-card>
+      <div class="card-info">
+        <div class="card-description">
+          <p>Descripción del producto 3</p>
+        </div>
+        <div class="card-price">
+          <p>$40.00</p>
+        </div>
+      </div>
+    </div>
   </div>
 </ion-content>
-
-  
-
