--- a/src/app/inicio/inicio.page.scss
+++ b/src/app/inicio/inicio.page.scss
@@ -1,36 +1,88 @@
 .header-container {
-display: flex;
-align-items: center;
-justify-content: space-between;
-background-color: #f4f4f4;
-padding: 15px;
-border-radius: 10px;
-box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+    background-color: transparent; 
 }
 
 .bienvenido-icon {
-font-size: 32px;
-color: #3880ff;
+    font-size: 20px;
+    color: #050505; 
 }
 
 .bienvenido-text {
-display: flex;
-flex-direction: column;
-align-items: center;
-text-align: center;
+    flex: 1; 
+    text-align: center; 
 }
 
 .bienvenido-label {
-font-size: 1rem;
-color: #666;
-font-family: 'Roboto', sans-serif;
-margin-bottom: 4px;
+    font-size: 1.2rem; 
+    color: #333; 
+    font-family: 'Urbanist', sans-serif;
 }
 
-.nombre-usuario-label {
-font-size: 1.5rem;
-color: #333;
-font-family: 'Roboto', sans-serif;
-font-weight: bold;
-letter-spacing: 0.5px;
+.nombre-usuario {
+    color: #000; 
+    font-weight: bold;
+}
+
+
+.searchbar-redondeada {
+    --border-radius: 50px; 
+    --background: #ffffff; 
+    --box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); 
+    --padding-start: 16px; /* Relleno interno a la izquierda */
+    --padding-end: 16px; /* Relleno interno a la derecha */
+    font-family: 'Urbanist', sans-serif;
+
+}
+
+.cards-container {
+    margin-top: 20px;
+}
+
+.card-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 8px;
+    background-color: #fff;
+}
+
+.card-image-container {
+    width: 80px; /* Tamaño reducido para la imagen */
+    height: 80px; /* Tamaño reducido para la imagen */
+    overflow: hidden;
+    border-radius: 8px;
+}
+
+.card-image {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.card-info {
+    flex: 1;
+    margin-left: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.card-description {
+    font-size: 0.9rem; /* Tamaño de fuente reducido */
+    color: #333;
+    font-family: 'Urbanist', sans-serif;
+}
+
+.card-price {
+    font-size: 1rem; /* Tamaño de fuente reducido */
+    font-weight: bold;
+    color: #000;
+    text-align: right;
+    font-family: 'Urbanist', sans-serif;
 }
