Se agrego una nueva pagina que trata sobre la configuracion del perfil de usuario, ademas de otras opciones.

--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -10,7 +10,7 @@
       <ion-icon name="arrow-back-outline"></ion-icon>
     </ion-button>
     <h1 class="page-title">Perfil de Usuario</h1>
-    <ion-button class="settings-button">
+    <ion-button class="settings-button" (click)="goToConfiguracion()">
       <ion-icon name="settings-outline"></ion-icon>
     </ion-button>
   </div>
