Cambios en la pagina de configuracion más opciones para el usuario, y se arreglo que la alerta en el login se salga automaticamente. Ademas se agrego una imagen en el inicio

--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -26,11 +26,12 @@
   <div class="cards-container">
     <div class="card-item">
       <ion-card class="card-image-container">
-        <img src="assets/img/card-image1.jpg" alt="Imagen 1" class="card-image">
+        <img src="assets/img/car-sedan.png" alt="Imagen 1" class="card-image">
       </ion-card>
       <div class="card-info">
         <div class="card-description">
-          <p>Descripción del producto 1</p>
+          <h6>Driver Antonio</h6>
+          <p>Voy en un Hyundai suv rojo, servicio excelente, comodidad garantizada</p>
         </div>
         <div class="card-price">
           <p>$20.00</p>
