--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -20,12 +20,16 @@
     <img src="assets/img/imagen_inicio.jpg" alt="Imagen de inicio" class="imagen-inicio">
   </div>
 
-  <div class="search-container">
-    <ion-searchbar placeholder="Buscar..." class="searchbar-redondeada"></ion-searchbar>
+  <div class="address-container">
+    <ion-item>
+      <ion-label position="floating">Ingrese su dirección</ion-label>
+      <ion-input [(ngModel)]="address" placeholder="Dirección"></ion-input>
+    </ion-item>
   </div>
 
   <div class="cards-container">
-    <div class="card-item">
+    <div 
+      class="card-item" [class.selected]="selectedCar === 'car1'" (click)="selectCar('car1')">
       <ion-card class="card-image-container">
         <img src="assets/img/car-sedan.png" alt="Imagen 1" class="card-image">
       </ion-card>
@@ -35,36 +39,64 @@
           <p>Voy en un Hyundai suv rojo, servicio excelente, comodidad garantizada</p>
         </div>
         <div class="card-price">
-          <p>$20.00</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="card-item">
-      <ion-card class="card-image-container">
-        <img src="assets/img/card-image2.jpg" alt="Imagen 2" class="card-image">
-      </ion-card>
-      <div class="card-info">
-        <div class="card-description">
-          <p>Descripción del producto 2</p>
-        </div>
-        <div class="card-price">
           <p>$30.00</p>
         </div>
+        <div class="rating-stars">
+          <ion-icon name="star" class="star"></ion-icon>
+          <ion-icon name="star" class="star"></ion-icon>
+          <ion-icon name="star" class="star"></ion-icon>
+          <ion-icon name="star" class="star"></ion-icon>
+          <ion-icon name="star-outline" class="star"></ion-icon>
+        </div>
       </div>
     </div>
 
-    <div class="card-item">
+    <div class="card-item" [ngClass]="{'selected': selectedCar === 'car2'}" (click)="selectCar('car2')">
       <ion-card class="card-image-container">
-        <img src="assets/img/card-image3.jpg" alt="Imagen 3" class="card-image">
+        <img src="assets/img/car-nissan.png" alt="Imagen 2" id="car1" class="card-image">
       </ion-card>
       <div class="card-info">
         <div class="card-description">
-          <p>Descripción del producto 3</p>
+          <h6>Driver Alexander</h6>
+          <p>Voy en un Nissan azul, servicio excelente, comodidad garantizada, 5 estrellas</p>
+        </div>
+        <div class="card-price">
+          <p>$50.00</p>
+        </div>
+
+        <div class="rating-stars">
+          <ion-icon name="star" class="star"></ion-icon>
+          <ion-icon name="star" class="star"></ion-icon>
+          <ion-icon name="star" class="star"></ion-icon>
+          <ion-icon name="star-outline" class="star"></ion-icon>
+          <ion-icon name="star-outline" class="star"></ion-icon>
+        </div>
+
+      </div>
+    </div>
+
+
+    <div class="card-item" [ngClass]="{'selected': selectedCar === 'car3'}" (click)="selectCar('car3')">
+      <ion-card class="card-image-container">
+        <img src="assets/img/ferrari.png" alt="Imagen 3" id="car2" class="card-image">
+      </ion-card>
+      <div class="card-info">
+        <div class="card-description">
+          <h6>Driver Alejandro</h6>
+          <p>Voy en un Ferrari rojo, servicio excelente, comodidad garantizada, 5 estrellas no se aceptan tipos llamados miguel</p>
         </div>
         <div class="card-price">
           <p>$40.00</p>
         </div>
+
+        <div class="rating-stars">
+          <ion-icon name="star" class="star"></ion-icon>
+          <ion-icon name="star" class="star"></ion-icon>
+          <ion-icon name="star" class="star"></ion-icon>
+          <ion-icon name="star" class="star"></ion-icon>
+          <ion-icon name="star" class="star"></ion-icon>
+        </div>
+
       </div>
     </div>
   </div>
