Logica para hacer la pagina para restablecer contraseña, la cual funciona correctamente.

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -31,12 +31,10 @@
         </form>
 
         <div class="forgot-password">
-          <a href="#" (click)="resetPassword()">¿Olvidaste tu contraseña?</a>
+          <a (click)="resetPassword()">¿Olvidaste tu contraseña?</a>
         </div>
       </ion-card-content>
     </ion-card>
   </div>
-
-
   
 </ion-content>
