--- a/src/app/actividad/actividad.page.html
+++ b/src/app/actividad/actividad.page.html
@@ -10,6 +10,7 @@
       <ion-icon name="arrow-back-outline"></ion-icon>
     </ion-button>
     <h1 class="page-title">Servicios</h1>
+    <!--Hola-->
   </div>
 
 </ion-content>
