--- a/src/app/servicios/servicios.page.html
+++ b/src/app/servicios/servicios.page.html
@@ -20,34 +20,65 @@
   <!-- Filtros y contenido de servicios -->
   <div class="filter-container">
     <ion-segment [(ngModel)]="selectedCategory" (ionChange)="filterServices()">
-      <ion-segment-button value="all">
-        Todos
-      </ion-segment-button>
-      <ion-segment-button value="transport">
-        Transporte
-      </ion-segment-button>
-      <ion-segment-button value="premium">
-        Premium
-      </ion-segment-button>
+      <ion-segment-button value="all">Todos</ion-segment-button>
+      <ion-segment-button value="transport">Transporte</ion-segment-button>
+      <ion-segment-button value="premium">Premium</ion-segment-button>
     </ion-segment>
   </div>
 
+  <!-- Servicios -->
+  <ion-card *ngFor="let service of filteredServices" class="service-card">
+    <ion-card-header>
+      <ion-card-title>{{ service.title }}</ion-card-title>
+      <div class="rating-stars">
+        <ion-icon *ngFor="let star of service.rating" name="star" class="star"></ion-icon>
+      </div>
+    </ion-card-header>
+    <ion-card-content>
+      <p>{{ service.description }}</p>
+      <ion-item lines="none" class="price-item">
+        <ion-label>{{ service.price }}</ion-label>
+        <ion-button fill="outline" (click)="selectService(service)">Seleccionar</ion-button>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
+  
 
-  <div class="service-container">
-    <ion-card *ngFor="let service of filteredServices" class="service-card" (click)="viewDetails(service)">
-      <ion-card-header>
-        <ion-card-title>{{ service.title }}</ion-card-title>
-        <div class="rating-stars">
-          <ion-icon *ngFor="let star of service.rating" name="star" class="star"></ion-icon>
-        </div>
-      </ion-card-header>
-      <ion-card-content>
-        <p>{{ service.description }}</p>
-        <ion-item lines="none" class="price-item">
-          <ion-label>{{ service.price }}</ion-label>
-          <ion-button fill="outline" (click)="selectService(service)">Seleccionar</ion-button>
-        </ion-item>
-      </ion-card-content>
-    </ion-card>
-  </div>
+  <!-- Modal para ingresar datos -->
+  <ion-modal [isOpen]="isModalOpen" (didDismiss)="closeModal()">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+          <ion-buttons slot="start">
+            <ion-button (click)="closeModal()">Cerrar</ion-button>
+          </ion-buttons>
+          <ion-title>Ingresar Datos del Servicio</ion-title>
+        </ion-toolbar>
+      </ion-header>
+
+      <ion-content>
+        <form (ngSubmit)="submitService()">
+          <ion-item>
+            <ion-label position="floating">Quien lo pide</ion-label>
+            <ion-input [(ngModel)]="requester" name="requester" required></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label position="floating">Fecha</ion-label>
+            <ion-input type="date" [(ngModel)]="date" name="date" required></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label position="floating">Modelo de Auto</ion-label>
+            <ion-input [(ngModel)]="carModel" name="carModel" required></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label position="floating">Precio por Persona</ion-label>
+            <ion-input type="number" [(ngModel)]="pricePerPerson" name="pricePerPerson" required></ion-input>
+          </ion-item>
+          <ion-button expand="full" type="submit">Enviar</ion-button>
+        </form>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
 </ion-content>
+
+
