--- a/src/app/servicios/servicios.page.html
+++ b/src/app/servicios/servicios.page.html
@@ -4,81 +4,47 @@
   <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </header>
 
-<ion-content>
+<ion-content [fullscreen]="true" class="ion-padding">
+
   <div class="header">
     <ion-button class="back-button" (click)="goToInicio()">
       <ion-icon name="arrow-back-outline"></ion-icon>
     </ion-button>
-    <h1 class="page-title">Servicios</h1>
+    <h1 class="page-title">Transporte Disponible</h1>
   </div>
 
-  <!-- Barra de búsqueda -->
-  <ion-item class="search-item">
-    <ion-searchbar [(ngModel)]="searchTerm" (ionInput)="filterServices()" placeholder="Buscar servicios"></ion-searchbar>
-  </ion-item>
 
-  <!-- Filtros y contenido de servicios -->
-  <div class="filter-container">
-    <ion-segment [(ngModel)]="selectedCategory" (ionChange)="filterServices()">
-      <ion-segment-button value="all">Todos</ion-segment-button>
-      <ion-segment-button value="transport">Transporte</ion-segment-button>
-      <ion-segment-button value="premium">Premium</ion-segment-button>
-    </ion-segment>
+  <div class="search-container">
+    <ion-item class="search-input">
+      <ion-label position="floating">Lugar de salida</ion-label>
+      <ion-input [(ngModel)]="pickupLocation"></ion-input>
+    </ion-item>
+
+    <ion-item class="search-input">
+      <ion-label position="floating">Destino</ion-label>
+      <ion-input [(ngModel)]="destination"></ion-input>
+    </ion-item>
+
+    <ion-button expand="block" class="search-btn" (click)="buscarViajes()">Buscar Transporte</ion-button>
   </div>
 
-  <!-- Servicios -->
-  <ion-card *ngFor="let service of filteredServices" class="service-card">
-    <ion-card-header>
-      <ion-card-title>{{ service.title }}</ion-card-title>
-      <div class="rating-stars">
-        <ion-icon *ngFor="let star of service.rating" name="star" class="star"></ion-icon>
-      </div>
-    </ion-card-header>
-    <ion-card-content>
-      <p>{{ service.description }}</p>
-      <ion-item lines="none" class="price-item">
-        <ion-label>{{ service.price }}</ion-label>
-        <ion-button fill="outline" (click)="selectService(service)">Seleccionar</ion-button>
-      </ion-item>
-    </ion-card-content>
-  </ion-card>
-  
+  <div *ngIf="viajesDisponibles.length > 0" class="results-container">
+    <ion-card *ngFor="let viaje of viajesDisponibles" (click)="solicitarAsiento(viaje)" class="viaje-card">
+      <ion-card-header>
+        <ion-card-title>{{ viaje.driverName }} - {{ viaje.vehicleDetails }}</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <p>Origen: {{ viaje.pickupLocation }}</p>
+        <p>Destino: {{ viaje.destination }}</p>
+        <p>Asientos disponibles: {{ viaje.availableSeats }}</p>
+        <p>Costo por pasajero: {{ viaje.costPerPassenger }}</p>
+      </ion-card-content>
+    </ion-card>
+  </div>
 
-  <!-- Modal para ingresar datos -->
-  <ion-modal [isOpen]="isModalOpen" (didDismiss)="closeModal()">
-    <ng-template>
-      <ion-header>
-        <ion-toolbar>
-          <ion-buttons slot="start">
-            <ion-button (click)="closeModal()">Cerrar</ion-button>
-          </ion-buttons>
-          <ion-title>Ingresar Datos del Servicio</ion-title>
-        </ion-toolbar>
-      </ion-header>
-
-      <ion-content>
-        <form (ngSubmit)="submitService()">
-          <ion-item>
-            <ion-label position="floating">Quien lo pide</ion-label>
-            <ion-input [(ngModel)]="requester" name="requester" required></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label position="floating">Fecha</ion-label>
-            <ion-input type="date" [(ngModel)]="date" name="date" required></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label position="floating">Modelo de Auto</ion-label>
-            <ion-input [(ngModel)]="carModel" name="carModel" required></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label position="floating">Precio por Persona</ion-label>
-            <ion-input type="number" [(ngModel)]="pricePerPerson" name="pricePerPerson" required></ion-input>
-          </ion-item>
-          <ion-button expand="full" type="submit">Enviar</ion-button>
-        </form>
-      </ion-content>
-    </ng-template>
-  </ion-modal>
+  <div *ngIf="viajesDisponibles.length === 0 && searchAttempted" class="no-results">
+    <p>No se encontraron transportes disponibles</p>
+  </div>
 </ion-content>
 
 
