--- a/src/app/inicio/inicio.page.scss
+++ b/src/app/inicio/inicio.page.scss
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Urbanist', sans-serif;
+}
+
 .header-container {
 display: flex;
 align-items: center;
@@ -58,3 +62,76 @@ ion-button {
 margin-bottom: 15px;
 font-family: 'Urbanist', sans-serif;
 }
+
+
+.weather-container {
+margin-top: 20px;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+ion-card {
+--background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
+--border-radius: 15px;
+--box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+color: white;
+padding: 15px;
+max-width: 320px;  /* Reducir el ancho */
+transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+&:hover {
+    transform: translateY(-5px);
+    --box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
+}
+}
+
+ion-card-header {
+text-align: center;
+}
+
+ion-card-title {
+font-size: 1.2rem;
+font-weight: bold;
+letter-spacing: 0.5px;
+}
+
+ion-card-content {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+padding: 10px;
+}
+
+ion-card-content p {
+margin: 6px 0;
+font-size: 1rem;
+}
+
+.weather-icon {
+font-size: 2.5rem;
+margin-bottom: 8px;
+animation: fadeIn 1.5s ease-in-out, rotateIcon 3s linear infinite;
+}
+
+@keyframes fadeIn {
+from {
+    opacity: 0;
+    transform: scale(0.9);
+}
+to {
+    opacity: 1;
+    transform: scale(1);
+}
+}
+@keyframes rotateIcon {
+    0% {
+    transform: rotate(0deg);
+    }
+    100% {
+    transform: rotate(360deg);
+    }
+}
+
+
