--- a/src/app/ofrecer-vehiculo/ofrecer-vehiculo.page.html
+++ b/src/app/ofrecer-vehiculo/ofrecer-vehiculo.page.html
@@ -16,6 +16,10 @@
 
   <div class="offer-container">
     <ion-item>
+      <ion-label position="floating">Nombre del Conductor</ion-label>
+      <ion-input [(ngModel)]="driverName"></ion-input>
+    </ion-item>
+    <ion-item>
       <ion-label position="floating">Marca del Vehículo</ion-label>
       <ion-input [(ngModel)]="vehicleBrand"></ion-input>
     </ion-item>
