--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -43,7 +43,8 @@
             <a (click)="resetPassword()">Olvidaste tu contraseña?</a>
           </div>
 
-          <ion-button expand="block" fill="outline" class="signup-button">Registrarse</ion-button>
+          <ion-button expand="block" fill="outline" class="signup-button" (click)="goToRegister()">Registrarse</ion-button>
+
         </ion-card-content>
       </div>
     </div>
