--- a/src/app/configuracion/configuracion.page.scss
+++ b/src/app/configuracion/configuracion.page.scss
@@ -39,8 +39,19 @@
 }
 
 .user-avatar {
-    width: 64px;
-    height: 64px;
+    position: relative;
+    width: 60px;
+    height: 60px;
+}
+
+.camera-icon {
+    font-size: 50px;
+    color: gray;
+    display: block;
+    width: 100%;
+    height: 100%;
+    line-height: 100px;
+    text-align: center;
 }
 
 .user-details {
