--- a/src/app/crear-usuario/crear-usuario.page.scss
+++ b/src/app/crear-usuario/crear-usuario.page.scss
@@ -1,11 +1,16 @@
-/* Usar la fuente Urbanist */
-* {
+*{
 font-family: 'Urbanist', sans-serif;
 }
 
+ion-content {
+--padding-start: 0;
+--padding-end: 0;
+--padding-top: 0;
+--padding-bottom: 0;
+height: 100%;
+}
 
-
-/* Fondo de la página con la imagen */
+/* Fondo de la página con la imagen de San Joaquín */
 #background-container {
 position: relative;
 height: 100vh;
@@ -49,8 +54,8 @@ display: flex;
 justify-content: center;
 }
 
-/* Restablecer Card */
-.reset-card {
+/* Signup Card */
+.signup-card {
 width: 100%;
 height: 100%;
 background-color: white;
@@ -61,8 +66,12 @@ padding: 20px;
 display: flex;
 flex-direction: column;
 justify-content: space-between;
+
 }
 
+ion-card-header {
+padding-bottom: 0;
+}
 
 ion-card-title {
 font-size: 1.2rem;
@@ -87,15 +96,15 @@ padding-left: 10px;
 font-size: 1rem;
 }
 
-/* Botón para restablecer contraseña */
-.reset-button {
+/* Botón de signup en amarillo */
+.signup-button {
 --background: #ffcc00;
 color: white;
 font-weight: bold;
 margin-top: 10px;
 }
 
-/* Animación de deslizamiento del formulario */
+/* Transición del formulario */
 .slide-up {
 animation: slideUpAnimation 1.5s ease forwards;
 }
@@ -121,4 +130,3 @@ color: #333;
 text-decoration: none;
 font-size: 1rem;
 }
-
