--- a/src/app/profile/profile.page.scss
+++ b/src/app/profile/profile.page.scss
@@ -54,16 +54,39 @@
     margin-bottom: 16px;
 }
 
-.avatar img{
-    margin-right: 16px;
+.avatar {
     width: 100px;
     height: 100px;
-    border-radius: 15px;
+    border-radius: 10px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f0f0f0;
+    cursor: pointer;
+
+    ion-icon.upload-icon {
+        font-size: 40px;
+        color: #888888;
+    }
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
+
+
+input[type="file"] {
+    display: none; /* Oculta el input de archivo */
+}
+
 
 .profile-info {
     display: flex;
     flex-direction: column;
+    margin-left: 20px;
 }
 
 .profile-info h2 {
@@ -196,4 +219,36 @@
 .additional-info ion-icon {
     margin-right: 8px;
     color: #888888;
+}
+.is-editing-container {
+    margin: 16px;
+    padding: 16px;
+    background-color: #f4f4f4;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    font-family: 'Urbanist', sans-serif;
+}
+
+.is-editing-container ion-item {
+    --background: #ffffff;
+    --border-radius: 10px;
+    margin-bottom: 12px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+}
+
+.is-editing-container ion-icon {
+    color: #888888;
+}
+
+.is-editing-container ion-input {
+    font-family: 'Urbanist', sans-serif;
+    font-size: 16px;
+    color: #555555;
+}
+
+.is-editing-container ion-button {
+    --border-radius: 10px !important;
+    margin-top: 12px;
+    font-family: 'Urbanist', sans-serif;
+    font-size: 16px;
 }
