--- a/src/app/servicios/servicios.page.scss
+++ b/src/app/servicios/servicios.page.scss
@@ -90,3 +90,35 @@
     font-family: 'Urbanist', sans-serif;
     margin-top: 20px;
 }
+
+
+
+.results-container {
+    margin-top: 20px;
+
+    ion-card {
+        margin-bottom: 20px;
+        --background: #fff;
+        border-radius: 10px;
+        --box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+
+        ion-card-title {
+            font-size: 1.2rem;
+            color: #000;
+            font-family: 'Urbanist', sans-serif;
+        }
+
+        ion-card-content {
+            font-family: 'Urbanist', sans-serif;
+            color: #666;
+
+            ion-button {
+                margin-top: 10px; // Espaciado entre el contenido y el botón
+                --background: #4CAF50; // Color de fondo del botón
+                --color: #fff; // Color del texto del botón
+                border-radius: 5px; // Bordes redondeados
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); // Sombra del botón
+            }
+        }
+    }
+}
