--- a/src/app/not-found/not-found.page.html
+++ b/src/app/not-found/not-found.page.html
@@ -1,12 +1,10 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>not-found</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-  <div class="not-found-container">
-    <h1>Página no encontrada</h1>
-    <ion-button (click)="goHome()">Volver al inicio</ion-button>
+<ion-content class="page-not-found-content">
+  <div class="error-container">
+    <h1 class="error-code">404</h1>
+    <h2 class="error-message">Oops! Página no encontrada.</h2>
+    <p class="error-description">
+      La página que estás buscando no existe o ha sido movida.
+    </p>
+    <ion-button color="primary" (click)="goHome()">Volver al Inicio</ion-button>
   </div>
 </ion-content>
