--- a/src/app/not-found/not-found.page.scss
+++ b/src/app/not-found/not-found.page.scss
@@ -1,43 +1,48 @@
-/* src/app/page-not-found/page-not-found.component.scss */
-
 .page-not-found-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    text-align: center;
-    background-color: #f8f9fa;
-  }
-  
-  .error-container {
-    max-width: 500px;
-    padding: 20px;
-    border-radius: 10px;
-    background-color: #ffffff;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .error-code {
-    font-size: 6rem;
-    color: #ff4757;
-    font-weight: 900;
-    margin: 0;
-  }
-  
-  .error-message {
-    font-size: 1.5rem;
-    color: #2f3542;
-    margin-top: 10px;
-  }
-  
-  .error-description {
-    font-size: 1rem;
-    color: #57606f;
-    margin-top: 5px;
-    margin-bottom: 20px;
-  }
-  
-  ion-button {
-    --background: #1e90ff;
-    --border-radius: 5px;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  text-align: center;
+  background-color: #f8f9fa;
+  padding: 20px;
+}
+
+.error-container {
+  width: 100%;
+  max-width: 600px; // Ajusta según tu preferencia para pantallas grandes
+  padding: 40px; // Incrementa el padding para que se vea más grande
+  border-radius: 10px;
+  background-color: #ffffff;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.error-code {
+  font-size: 8rem; // Incrementa el tamaño para una apariencia más impactante
+  color: #ff4757;
+  font-weight: 900;
+  margin: 0;
+}
+
+.error-message {
+  font-size: 2rem; // Aumenta el tamaño del mensaje de error
+  color: #2f3542;
+  margin-top: 10px;
+}
+
+.error-description {
+  font-size: 1.2rem; // Incrementa ligeramente el tamaño
+  color: #57606f;
+  margin-top: 5px;
+  margin-bottom: 20px;
+  padding: 0 10px; // Añade un padding horizontal para mejor legibilidad en pantallas pequeñas
+}
+
+ion-button {
+  --background: #1e90ff;
+  --border-radius: 5px;
+  width: 100%; // Hace que el botón ocupe toda la anchura del contenedor
+  max-width: 300px; // Establece un ancho máximo para evitar que se expanda demasiado en pantallas grandes
+  margin-top: 20px; // Añade un margen superior para separar del contenido
+}
